crates/qwik-optimizer-oxc/tests/snapshots/example_qwik_react.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import {
  componentQrl,
  inlinedQrl,
  useLexicalScope,
  useHostElement,
  useStore,
  useTaskQrl,
  noSerialize,
  SkipRerender,
  implicit$FirstArg,
} from "@qwik.dev/core";
import { jsx, Fragment } from "@qwik.dev/core/jsx-runtime";
import { isBrowser, isServer } from "@qwik.dev/core";

function qwikifyQrl(reactCmpQrl) {
  return /* @__PURE__ */ componentQrl(
    inlinedQrl(
      (props) => {
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props["client:visible"]) run = "visible";
        else if (props["client:load"] || props["client:only"]) run = "load";
        useTaskQrl(
          inlinedQrl(
            async (track) => {
              const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
              track(props);
              if (isBrowser) {
                if (store.data)
                  store.data.root.render(
                    store.data.client.Main(store.data.cmp, filterProps(props)),
                  );
                else {
                  const [Cmp, client] = await Promise.all([
                    reactCmpQrl.resolve(),
                    import("./client-f762f78c.js"),
                  ]);
                  let root;
                  if (hostElement.childElementCount > 0)
                    root = client.hydrateRoot(
                      hostElement,
                      client.Main(Cmp, filterProps(props), store.event),
                    );
                  else {
                    root = client.createRoot(hostElement);
                    root.render(client.Main(Cmp, filterProps(props)));
                  }
                  store.data = noSerialize({
                    client,
                    cmp: Cmp,
                    root,
                  });
                }
              }
            },
            "qwikifyQrl_component_useWatch_XXXXXXXXXXXX",
            [hostElement, props, reactCmpQrl, store],
          ),
          {
            run,
          },
        );
        if (isServer && !props["client:only"]) {
          const jsx$1 = Promise.all([reactCmpQrl.resolve(), import("./server-9ac6caad.js")]).then(
            ([Cmp, server]) => {
              const html = server.render(Cmp, filterProps(props));
              return /* @__PURE__ */ jsx(Host, {
                dangerouslySetInnerHTML: html,
                [_IMMUTABLE]: ["dangerouslySetInnerHTML"],
              });
            },
          );
          return /* @__PURE__ */ jsx(Fragment, {
            children: jsx$1,
          });
        }
        return /* @__PURE__ */ jsx(Host, {
          children: /* @__PURE__ */ jsx(SkipRerender, {}),
        });
      },
      "qwikifyQrl_component_XXXXXXXXXXXX",
      [reactCmpQrl],
    ),
    {
      tagName: "qwik-wrap",
    },
  );
}
const filterProps = (props) => {
  const obj = {};
  Object.keys(props).forEach((key) => {
    if (!key.startsWith("client:")) obj[key] = props[key];
  });
  return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);

async function renderToString(rootNode, opts) {
  const mod = await import("./server-9ac6caad.js");
  const result = await mod.renderToString(rootNode, opts);
  const styles = mod.getGlobalStyleTag(result.html);
  const finalHtml = styles + result.html;
  return {
    ...result,
    html: finalHtml,
  };
}

export { qwikify$, qwikifyQrl, renderToString };

=== ../node_modules/@qwik.dev/react/index.qwik.mjs ===
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./index.qwik.mjs_qwikifyQrl_component_XXXXXXXXXXXX.mjs");
import { componentQrl, implicit$FirstArg } from "@qwik.dev/core";
function qwikifyQrl(reactCmpQrl) {
  return /* @__PURE__ */ componentQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "qwikifyQrl_component_XXXXXXXXXXXX", [reactCmpQrl]),
    {
      tagName: "qwik-wrap",
    },
  );
}
const filterProps = (props) => {
  const obj = {};
  Object.keys(props).forEach((key) => {
    if (!key.startsWith("client:")) obj[key] = props[key];
  });
  return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);
async function renderToString(rootNode, opts) {
  const mod = await import("./server-9ac6caad.js");
  const result = await mod.renderToString(rootNode, opts);
  const styles = mod.getGlobalStyleTag(result.html);
  const finalHtml = styles + result.html;
  return {
    ...result,
    html: finalHtml,
  };
}
export { qwikify$, qwikifyQrl, renderToString };
export { filterProps as _auto_filterProps };

=== ../node_modules/@qwik.dev/react/index.qwik.mjs_qwikifyQrl_component_XXXXXXXXXXXX.mjs === (ENTRY)
import { Fragment } from "@qwik.dev/core/jsx-runtime";
import { SkipRerender } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _auto_filterProps as filterProps } from "./index.qwik.mjs";
import { isServer } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useHostElement } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./index.qwik.mjs_qwikifyQrl_component_useWatch_XXXXXXXXXXXX.mjs");
export const qwikifyQrl_component_XXXXXXXXXXXX = (props) => {
  const [reactCmpQrl] = useLexicalScope();
  const hostElement = useHostElement();
  const store = useStore({});
  let run;
  if (props["client:visible"]) run = "visible";
  else if (props["client:load"] || props["client:only"]) run = "load";
  useTaskQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "qwikifyQrl_component_useWatch_XXXXXXXXXXXX", [
      hostElement,
      props,
      reactCmpQrl,
      store,
    ]),
    {
      run,
    },
  );
  if (isServer && !props["client:only"]) {
    const jsx$1 = Promise.all([reactCmpQrl.resolve(), import("./server-9ac6caad.js")]).then(
      ([Cmp, server]) => {
        const html = server.render(Cmp, filterProps(props));
        return /* @__PURE__ */ _jsxSorted(
          Host,
          {
            dangerouslySetInnerHTML: html,
            [_IMMUTABLE]: ["dangerouslySetInnerHTML"],
          },
          null,
          null,
          3,
          "8p_0",
        );
      },
    );
    return /* @__PURE__ */ _jsxSorted(Fragment, null, null, jsx$1, 1, "8p_1");
  }
  return /* @__PURE__ */ _jsxSorted(
    Host,
    null,
    null,
    /* @__PURE__ */ _jsxSorted(SkipRerender, null, null, null, 3, "8p_2"),
    1,
    "8p_3",
  );
};

/*
{
  "origin": "../node_modules/@qwik.dev/react/index.qwik.mjs",
  "name": "qwikifyQrl_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "index.qwik.mjs_qwikifyQrl_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "index.qwik.mjs_qwikifyQrl_component_XXXXXXXXXXXX",
  "path": "../node_modules/@qwik.dev/react",
  "extension": "mjs",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "paramNames": [
    "props"
  ],
  "captureNames": [
    "reactCmpQrl"
  ]
}
*/

=== ../node_modules/@qwik.dev/react/index.qwik.mjs_qwikifyQrl_component_useWatch_XXXXXXXXXXXX.mjs === (ENTRY)
import { _auto_filterProps as filterProps } from "./index.qwik.mjs";
import { isBrowser } from "@qwik.dev/core";
import { noSerialize } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
export const qwikifyQrl_component_useWatch_XXXXXXXXXXXX = async (track) => {
  const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
  track(props);
  if (isBrowser) {
    if (store.data)
      store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
    else {
      const [Cmp, client] = await Promise.all([
        reactCmpQrl.resolve(),
        import("./client-f762f78c.js"),
      ]);
      let root;
      if (hostElement.childElementCount > 0)
        root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
      else {
        root = client.createRoot(hostElement);
        root.render(client.Main(Cmp, filterProps(props)));
      }
      store.data = noSerialize({
        client,
        cmp: Cmp,
        root,
      });
    }
  }
};

/*
{
  "origin": "../node_modules/@qwik.dev/react/index.qwik.mjs",
  "name": "qwikifyQrl_component_useWatch_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "index.qwik.mjs_qwikifyQrl_component_useWatch",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "index.qwik.mjs_qwikifyQrl_component_useWatch_XXXXXXXXXXXX",
  "path": "../node_modules/@qwik.dev/react",
  "extension": "mjs",
  "parent": "qwikifyQrl_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "paramNames": [
    "track"
  ],
  "captureNames": [
    "hostElement",
    "props",
    "reactCmpQrl",
    "store"
  ]
}
*/

=== DIAGNOSTICS ===

[]
